--- a/src/main/resources/templates/cust_list.html
+++ b/src/main/resources/templates/cust_list.html
@@ -4,35 +4,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/home.css}">
+    <link rel="stylesheet" th:href="@{/css/cust_list.css}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div th:insert="~{header::header}"></div>
-    <a th:href="@{addcustomer}" class="btn btn-primary add_cust">Add Customer</a>
-    <a th:href="@{additems}" class="btn btn-danger add_item">Add Item</a>
-    <table class="table table-bordered table-striped">
-        <thead>
-        <tr>
-            <th>Customer Name</th>
-            <th>Customer Contact</th>
-            <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
+<div th:insert="~{header::header}"></div>
+<h3 th:inline="text" class="title">Customer Name : [[${customer}]]</h3>
+<hr class="rule">
+<table class="table table-bordered table-striped">
 
-            <tr th:each="a:${customers}">
-                <td th:text = "${a.name}"></td>
-                <td th:text = "${a.contact}"></td>
-                <td>
-                    <a th:href="@{shop(customer=${a.name})}" class="btn btn-info">
-                        Shop
-                    </a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <thead class="table-dark">
+    <tr>
+        <th>
+            Item Name
+        </th>
+        <th>
+            Item Price
+        </th>
+        <th>
+            Item Instock
+        </th>
+        <th>
+            Actions
+        </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="a:${items}">
+        <td th:text="${a.name}"></td>
+        <td th:text="${a.price}"></td>
+        <td th:text="${a.stock}"></td>
+        <td>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
