--- a/src/main/resources/templates/item_form_update.html
+++ b/src/main/resources/templates/item_form_update.html
@@ -3,7 +3,7 @@
     <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/header.css}">
-    <link rel="stylesheet" th:href="@{/css/items.css}">
+    <link rel="stylesheet" th:href="@{/css/item_form.css}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
@@ -11,28 +11,21 @@
 
 <body>
 <div th:insert="~{header::header}"></div>
-<a th:href="@{additems}" class="btn btn-danger add_item">Add Items</a>
-<a th:href="@{init}" class="btn btn-dark back">Home</a>
-<table class="table table-bordered table-striped">
-    <thead class="table-dark">
-    <tr>
-        <th>Item Name</th>
-        <th>Item Price</th>
-        <th>Item In Stock</th>
-        <th>Action</th>
-    </tr>
-    </thead>
-    <tbody>
-        <tr th:each="a:${Items}">
-            <td th:iniline="text">[[${a.name}]]</td>
-            <td th:iniline="text">[[${a.price}]]</td>
-            <td th:iniline="text">[[${a.stock}]]</td>
-            <td>
-                <a th:href="@{itemupd(name=${a.name})}" class="btn btn-info">Update Item</a>
-                <a th:href="@{itemdel(name=${a.name})}" class="btn btn-danger">Delete Item</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<form action="#" th:action="@{updateitem}" th:object="${Item}" class="myform" method="post">
+    <h3>Add Item Form</h3>
+    <hr>
+    <input type="hidden" th:field="*{name}" name="update">
+    <label>Item Name</label>
+    <input type="text" th:field="*{name}" class="form-control col-5">
+    <br>
+    <label>Item Price</label>
+    <input type="text" th:field="*{price}" class="form-control col-5">
+    <br>
+    <label>Item in Stock</label>
+    <input type="text" th:field="*{stock}" class="form-control col-5">
+    <br>
+    <input type="submit" class="btn btn-outline-dark" value="Add Item">
+    <a th:href="@{items}" class="btn btn-outline-primary">Back</a>
+</form>
 </body>
 </html>
