--- a/src/main/resources/templates/item_form_update.html
+++ b/src/main/resources/templates/item_form_update.html
@@ -24,7 +24,7 @@
     <label>Item in Stock</label>
     <input type="text" th:field="*{stock}" class="form-control col-5">
     <br>
-    <input type="submit" class="btn btn-outline-dark" value="Add Item">
+    <input type="submit" class="btn btn-outline-dark" value="Update Item">
     <a th:href="@{items}" class="btn btn-outline-primary">Back</a>
 </form>
 </body>
