--- a/src/main/resources/templates/cust_update.html
+++ b/src/main/resources/templates/cust_update.html
@@ -11,18 +11,16 @@
 
 <body>
 <div th:insert="~{header::header}"></div>
-
-<form action="#" th:action="@{savecust}" th:object="${customer}" class="myform" method="post">
+<form action="#" th:action="@{updatecust}" th:object="${customer}" class="myform" method="post">
   <h3>Customer Form</h3>
   <hr>
+  <input type="hidden" th:field="*{name}">
   <label>Customer Name</label>
   <input type="text" th:field="*{name}" class="form-control col-5">
   <br>
   <label>Contact</label>
   <input type="text" th:field="*{contact}" class="form-control col-5">
   <br>
-  <input type="submit" class="btn btn-outline-secondary" value="Add Customer">
+  <input type="submit" class="btn btn-outline-secondary" value="update Customer">
   <a th:href="@{init}" class="btn btn-outline-primary">Back</a>
 </form>
-</body>
-</html>
